tests/integration/security/sds_egress/testdata/rule-route-sidecar-to-egress-bing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-bing-through-egress-gateway
spec:
  hosts:
    - bing.com
  gateways:
    - istio-egressgateway
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.dubbo-system.svc.cluster.local
            subset: bing
            port:
              number: 80
          weight: 100
    - match:
        - gateways:
            - istio-egressgateway
          port: 80
      route:
        - destination:
            host: bing.com
            port:
              number: 80
          weight: 100
